// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBottomNav.js should be hidden with a false value 1`] = `

<div class="bottom-nav">
</div>

`;

exports[`VBottomNav.js should be visible with a true value 1`] = `

<div class="bottom-nav bottom-nav--active">
</div>

`;

exports[`VBottomNav.js should have a bottom-nav class 1`] = `

<div class="bottom-nav">
</div>

`;

exports[`VBottomNav.js should have prop classes 1`] = `

<div class="bottom-nav bottom-nav--absolute bottom-nav--shift">
</div>

`;
